--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
 	"clientId": "993841543041532035",
 	"guildId": "810968896756252732",
 	"canal": "1025526497458528266",
-	"token": "OTkzODQxNTQzMDQxNTMyMDM1.GEuvbl.CKVDGRS2nyu7Q8XgQvDgljjtBNS69c5X2U6QoA",
-	"mongoose": "mongodb+srv://PAMNAEF:SPA2k4y6@1.z0hl49x.mongodb.net/?retryWrites=true&w=majority"
+	"token": "",
+	"mongoose": ""
 }
